--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,10 @@
     <servlet-name>spring</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
+
+<welcome-file-list>
+  <welcome-file>first.jsp</welcome-file>
+</welcome-file-list>
   
 </web-app>
 
